@@ -5,7 +5,8 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Support "on" keyword argument for with_roles method in group builder.
+  [mathias.leimgruber]
 
 
 1.2.0 (2014-01-31)
